add: fix api documentation
